Corrigidas informações e alterada documentação.
