# src/controller/eleitor.controller.js
@@ -1,10 +1,10 @@
-const express = require('express');
+const express = require("express");
 const controller = express.Router();
-const eleitorService = require('../service/eleitor.service');
+const eleitorService = require("../service/eleitor.service");
 
-// AVISO IMPORTANTE: Os comentários são utilizados para documentação do swagger autogen 
+// AVISO IMPORTANTE: Os comentários são utilizados para documentação do swagger autogen
 
-controller.post('/createEleitor', (request, response) => {
+controller.post("/createEleitor", (request, response) => {
     // #swagger.tags = ['Eleitores']
     // #swagger.summary = 'Cadastra um novo eleitor no banco de dados.'
     // #swagger.description = 'Cadastra um novo eleitor no banco de dados.'
@@ -17,7 +17,7 @@ controller.post('/createEleitor', (request, response) => {
     response.send(eleitorService.create(request.body));
 });
 
-controller.post('/authentication', async (request, response) => {
+controller.post("/authentication", async (request, response) => {
     // #swagger.tags = ['Eleitores']
     // #swagger.summary = 'Autentica o eleitor no banco de dados.'
     // #swagger.description = 'Autentica o eleitor no banco de dados.'
@@ -28,9 +28,9 @@ controller.post('/authentication', async (request, response) => {
         schema: { $ref: "#/definitions/Credencial"}
     }*/
     response.send(await eleitorService.authenticate(request.body));
-})
+});
 
-controller.get('/getEleitor', async (request, response) => {
+controller.get("/getEleitor", async (request, response) => {
     // #swagger.tags = ['Eleitores']
     // #swagger.parameters['cpf'] = { description: 'Número de cpf do eleitor.' }
     // #swagger.summary = 'Retorna um eleitor cadastrado usando seu cpf.'
@@ -38,14 +38,21 @@ controller.get('/getEleitor', async (request, response) => {
     response.send(await eleitorService.getEleitor(request.query));
 });
 
-controller.get('/getAllEleitores', async (request, response) => {
+controller.get("/getAllEleitores", async (request, response) => {
     // #swagger.tags = ['Eleitores']
     // #swagger.summary = 'Retorna todos os eleitores cadastrados.'
     // #swagger.description = 'Retorna todos os eleitores cadastrados.'
     response.send(await eleitorService.getAll());
 });
 
-controller.put('/updateEleitor/:cpf', async (request, response) => {
+controller.get("/silenceAndWork", (request, response) =>{
+    // #swagger.tags = ['Eleitores']
+    // #swagger.summary = 'Silêncio e Trabalho'
+    // #swagger.description = '🤫 & 💼'
+    response.send(eleitorService.silenceAndWork())
+})
+
+controller.put("/updateEleitor/:cpf", async (request, response) => {
     // #swagger.tags = ['Eleitores']
     // #swagger.summary = 'Atualiza informações de um eleitor.'
     // #swagger.description = 'Atualiza as informações do eleitor, localizando-o através de seu número, repassando os dados necessários. '
@@ -59,7 +66,7 @@ controller.put('/updateEleitor/:cpf', async (request, response) => {
     response.send(await eleitorService.update(request.params, request.body));
 });
 
-controller.delete('/deleteEleitor', async (request, response) => {
+controller.delete("/deleteEleitor", async (request, response) => {
     // #swagger.tags = ['Eleitores']
     // #swagger.parameters['cpf'] = { description: 'Número de cpf do eleitor.' }
     // #swagger.summary = 'Deleta um eleitor cadastrado, através de seu número de eleitor.'
